--- a/_config.yml
+++ b/_config.yml
@@ -320,3 +320,8 @@ markdown:     kramdown
 
 #what files should be excluded
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+
+# sponsors
+sponsors_margin_top: 15
+sponsors_padding_top: 10
+sponsors_json_url: https://s3.amazonaws.com/kinlane-productions/json/sponsors.json
