--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ data_show: yes
 data_nav: yes
 data_title: Data Files
 data_description: This is a work in progress, trying to work with new ways of accessing and putting this clinical trials data to work, at the request of someone trying to integrate into their own work.
-data_footer: The goal around publishing these CSV and JSON alternatives is to make this data easier to consumer, and integrate into websites, applications, visualizations, and other integrations.
+data_footer: The goal of publishing these CSV and JSON alternatives is to make this data easier to consumer, and integrate into websites, applications, visualizations, and other integrations.
 
 # You can add one or many data sets here, with a title, and link to CSV and JSON file
 data:
@@ -322,6 +322,6 @@ markdown:     kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 # sponsors
-sponsors_margin_top: 15
-sponsors_padding_top: 10
+sponsors_margin_top: 30
+sponsors_padding_top: 15
 sponsors_json_url: https://s3.amazonaws.com/kinlane-productions/json/sponsors.json
