--- a/_config.yml
+++ b/_config.yml
@@ -324,4 +324,6 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 # sponsors
 sponsors_margin_top: 30
 sponsors_padding_top: 15
+sponsors_margin_bottom: 15
+sponsors_padding_bottom: 15
 sponsors_json_url: https://s3.amazonaws.com/kinlane-productions/json/sponsors.json
